# bitea

./: .gitignore  CMakeLists.txt  README.md  config.json  start.example.sh  start.sh
backend/: main.cpp
backend/blockchain/: Block.h  Blockchain.h  Transaction.h
backend/database/: MongoClient.h  RedisClient.h
backend/models/: Post.h  Session.h  User.h
backend/server/: HttpServer.h
backend/utils/: InputValidator.h
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  config.example.js
